# Battleship

./: CMakeLists.txt  README.md  README.txt  log.txt
exceptions/: exceptions.h
include/: computer.h  coordinata.h  corazzata.h  game.h  giocatore.h  gioco.h  griglia.h  griglia_attacco.h  nave.h  persona.h  sottomarino.h  supporto.h
lib/: corazzata.cpp  game.cpp  giocatore.cpp  gioco.cpp  griglia.cpp  nave.cpp  sottomarino.cpp  supporto.cpp
utilities/: coordinata.cpp  griglia.cpp  main  main.cpp  replay.cpp
